@@ -1,27 +1,34 @@
 var trimDay = require('./')
 var localOffset = new Date().getTimezoneOffset()
-var defaults = { timezoneOffset: 0, revertZone: false }
+var defaults = { 
+  timezoneOffset: 0,
+  dayTimezoneOffset: null,
+  revertZone: false
+}
 
 
 module.exports = function(day, range, options) {
   options = options || defaults
-  var fullOffset = options.timezoneOffset - localOffset
-  var toLocal = changeOffset(fullOffset)
-  var tzDay = Array.isArray(day) ? day.map(toLocal) : toLocal(day)
-  var tzRange = range.map(toLocal)
 
+  var offset = options.timezoneOffset - localOffset
+  var dayOffset = options.dayTimezoneOffset ? options.dayTimezoneOffset - localOffset : null
+
+  var tzRange = updateZone(range, offset)
+  var tzDay = dayOffset ? updateZone(day, dayOffset) : day
+  
   var inter = trimDay(tzDay, tzRange, options)
 
   if(!inter)
     return null
   
-  return options.revertZone ? inter.map(changeOffset(-fullOffset)) : inter
+  return options.revertZone ? updateZone(inter, -offset) : inter
 }
 
-function changeOffset(timezoneOffset) {
-  return function utc(date) {
-    return new Date(date.getTime() - toMs(timezoneOffset))
+function updateZone(day, offset) {
+  var toLocal = function utc(date) {
+    return new Date(date.getTime() - toMs(offset))
   }
+  return Array.isArray(day) ? day.map(toLocal) : toLocal(day)
 }
 
 function toMs(mn) {
